# cmd/api/api.go
@@ -1,29 +1,87 @@
 package main
 
 import (
+	"context"
+	"expvar"
 	"fmt"
 	"log"
 	"net/http"
+	"os/signal"
+	"syscall"
 	"time"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/chi/v5/middleware"
+	"github.com/go-chi/cors"
+	"github.com/go-redis/redis_rate/v10"
 	httpSwagger "github.com/swaggo/http-swagger/v2"
+	"go.uber.org/zap"
 
 	"github.com/yanpavel/social_project/docs"
+	"github.com/yanpavel/social_project/internal/auth"
+	"github.com/yanpavel/social_project/internal/mailer"
 	"github.com/yanpavel/social_project/internal/store"
+	"github.com/yanpavel/social_project/internal/store/cache"
 )
 
 type application struct {
-	config config
-	store  store.Storage
+	config           config
+	store            store.Storage
+	logger           *zap.SugaredLogger
+	mailer           mailer.Client
+	authenticator    auth.Authenticator
+	cacheStorage     cache.Storage
+	redisRateLimiter redis_rate.Limiter
 }
 
 type config struct {
-	addr   string
-	db     dbConfig
-	env    string
-	apiURL string
+	addr        string
+	db          dbConfig
+	env         string
+	apiURL      string
+	mail        mailConfig
+	frontendUrl string
+	auth        authConfig
+	redisCfg    redisConfig
+}
+
+type redisConfig struct {
+	addr          string
+	pw            string
+	db            int
+	enabled       bool
+	isRatelimiter bool
+}
+
+type authConfig struct {
+	basic basicConfig
+	token tokenConfig
+}
+
+type tokenConfig struct {
+	secret string
+	exp    time.Duration
+	iss    string
+}
+
+type basicConfig struct {
+	user string
+	pass string
+}
+
+type mailConfig struct {
+	exp       time.Duration
+	fromEmail string
+	sendGrid  sendGridConfig
+	mailTrap  mailTrapConfig
+}
+
+type sendGridConfig struct {
+	apiKey string
+}
+
+type mailTrapConfig struct {
+	apiKey string
 }
 
 type dbConfig struct {
@@ -36,27 +94,39 @@ type dbConfig struct {
 func (app *application) mount() http.Handler {
 	r := chi.NewRouter()
 
+	r.Use(app.RateLimiterMiddleware)
 	r.Use(middleware.RequestID)
 	r.Use(middleware.RealIP)
 	r.Use(middleware.Logger)
 	r.Use(middleware.Recoverer)
+	r.Use(cors.Handler(cors.Options{
+		AllowedOrigins:   []string{"http://*", "http://*"},
+		AllowedMethods:   []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
+		AllowedHeaders:   []string{"Accept", "Authorization", "Content-Type", "X-CSRF-Token"},
+		ExposedHeaders:   []string{"Link"},
+		AllowCredentials: false,
+		MaxAge:           300, // Maximum value not ignored by any of major browsers
+	}))
 
 	r.Use(middleware.Timeout(60 * time.Second))
 
 	r.Route("/v1", func(r chi.Router) {
 		r.Get("/health", app.healthCheckHandler)
+		r.With(app.BasicAuthMiddleWare()).Get("/debug/vars", expvar.Handler().ServeHTTP)
 
 		docsURL := fmt.Sprintf("%s/swagger/doc.json", app.config.addr)
 		r.Get("/swagger/*", httpSwagger.Handler(httpSwagger.URL(docsURL)))
 		r.Route("/posts", func(r chi.Router) {
+			r.Use(app.AuthTokenMiddleware)
+
 			r.Post("/", app.createPostsHandler)
 
 			r.Route("/{postID}", func(r chi.Router) {
 				r.Use(app.postContextMiddleWare)
 				r.Get("/", app.getPostHandler)
 
-				r.Delete("/", app.deletePostHandler)
-				r.Patch("/", app.patchPostHandler)
+				r.Delete("/", app.checkPostOwnership("admin", app.deletePostHandler))
+				r.Patch("/", app.checkPostOwnership("moderator", app.patchPostHandler))
 
 				r.Post("/comment", app.postCommentHandler)
 				r.Get("/comment", app.getCommentByPostHandler)
@@ -64,16 +134,24 @@ func (app *application) mount() http.Handler {
 		})
 
 		r.Route("/users", func(r chi.Router) {
+			r.Put("/activate/{token}", app.activateUserHandler)
 			r.Route("/{userId}", func(r chi.Router) {
-				r.Use(app.userContextMiddleware)
-				r.Get("/", app.getUserHandler)
+				r.Use(app.AuthTokenMiddleware)
 
+				r.Get("/", app.getUserHandler)
 				r.Put("/follow", app.followUserHandler)
 				r.Put("/unfollow", app.unfollowUserHandler)
 			})
 			r.Group(func(r chi.Router) {
+				r.Use(app.AuthTokenMiddleware)
+
 				r.Get("/feed/", app.getUserFeedHandler)
 			})
+		})
+
+		r.Route("/authentication", func(r chi.Router) {
+			r.Post("/user/", app.registerUserHandler)
+			r.Post("/token/", app.createTokenHandler)
 		})
 	})
 
@@ -94,7 +172,20 @@ func (app *application) run(mux http.Handler) error {
 		IdleTimeout:  time.Minute * 1,
 	}
 
-	log.Printf("server has started at %v", app.config.addr)
+	ctx, stop := signal.NotifyContext(context.Background(), syscall.SIGINT, syscall.SIGTERM)
+	defer stop()
 
-	return srv.ListenAndServe()
+	go func() {
+		if err := srv.ListenAndServe(); err != nil && err != http.ErrServerClosed {
+			log.Fatalf("server error: %v", err)
+		}
+	}()
+
+	<-ctx.Done()
+	log.Println("Shutting down...")
+
+	shutdownCtx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+	defer cancel()
+
+	return srv.Shutdown(shutdownCtx)
 }
