# cmd/api/users.go
@@ -2,9 +2,9 @@ package main
 
 import (
 	"context"
-	"errors"
 	"net/http"
 	"strconv"
+	"time"
 
 	"github.com/go-chi/chi/v5"
 	"github.com/yanpavel/social_project/internal/store"
@@ -13,6 +13,41 @@ import (
 type userKey string
 
 const userCtx userKey = "user"
+
+// ActivateUser gdoc
+//
+//	@Summary		Activate a user
+//	@Description	Activate a user by token
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Param			token	path		string	true	"Token"
+//	@Success		204		{string}	string	"User activated"
+//	@Failure		400		{object}	error	"User with the token found"
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/activate/{token} [put]
+func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
+	token := chi.URLParam(r, "token")
+
+	ctx, cancel := context.WithTimeout(r.Context(), time.Second*8)
+	defer cancel()
+
+	if err := app.store.Users.Activate(ctx, token); err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.badRequestError(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusNoContent, nil); err != nil {
+		app.internalServerError(w, r, err)
+		return
+	}
+}
 
 // GetUser godoc
 //
@@ -29,16 +64,30 @@ const userCtx userKey = "user"
 //	@Security		ApiKeyAuth
 //	@Router			/users/{userId} [get]
 func (app *application) getUserHandler(w http.ResponseWriter, r *http.Request) {
-	user := getUserFromContext(r)
+	userID, err := strconv.ParseInt(chi.URLParam(r, "userId"), 10, 64)
+	if err != nil {
+		app.badRequestError(w, r, err)
+		return
+	}
+
+	ctx, cancel := context.WithTimeout(r.Context(), time.Second*8)
+	defer cancel()
+
+	user, err := app.getUser(ctx, userID)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.notFoundError(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
 
 	if err := app.jsonResponse(w, http.StatusOK, user); err != nil {
 		app.internalServerError(w, r, err)
 		return
 	}
-}
-
-type FollowerUser struct {
-	UserID int64 `json:"follower_id"`
 }
 
 // FollowUser godoc
@@ -56,13 +105,17 @@ type FollowerUser struct {
 //	@Security		ApiKeyAuth
 //	@Router			/users/{userID}/follow [put]
 func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request) {
-	followeeUser := getUserFromContext(r)
+	followerUser := getUserFromContext(r)
+	followedId, err := strconv.ParseInt(chi.URLParam(r, "userID"), 10, 64)
+	if err != nil {
+		app.badRequestError(w, r, err)
+		return
+	}
 
-	var payload FollowerUser
+	ctx, cancel := context.WithTimeout(r.Context(), 8*time.Second)
+	defer cancel()
 
-	readJSON(w, r, &payload)
-
-	if err := app.store.Followers.FollowUser(r.Context(), followeeUser.Id, payload.UserID); err != nil {
+	if err := app.store.Followers.FollowUser(ctx, followedId, followerUser.Id); err != nil {
 		switch err {
 		case store.ErrConflict:
 			app.conflictError(w, r, err)
@@ -94,57 +147,30 @@ func (app *application) followUserHandler(w http.ResponseWriter, r *http.Request
 //	@Security		ApiKeyAuth
 //	@Router			/users/{userID}/unfollow [put]
 func (app *application) unfollowUserHandler(w http.ResponseWriter, r *http.Request) {
-	followeeUser := getUserFromContext(r)
+	unfollowerUser := getUserFromContext(r)
+	unfollowedId, err := strconv.ParseInt(chi.URLParam(r, "userID"), 10, 64)
+	if err != nil {
+		app.badRequestError(w, r, err)
+		return
+	}
 
-	ctx := context.Background()
-	var payload FollowerUser
+	ctx, cancel := context.WithTimeout(r.Context(), 8*time.Second)
+	defer cancel()
 
-	readJSON(w, r, &payload)
-	followerUser := payload.UserID
-
-	if err := app.store.Followers.UnfollowUser(ctx, followeeUser.Id, followerUser); err != nil {
+	if err := app.store.Followers.UnfollowUser(ctx, unfollowedId, unfollowerUser.Id); err != nil {
 		switch err {
 		case store.ErrNotFound:
 			app.notFoundError(w, r, err)
-			return
 		default:
 			app.internalServerError(w, r, err)
-			return
 		}
+		return
 	}
 
 	if err := app.jsonResponse(w, http.StatusNoContent, nil); err != nil {
 		app.internalServerError(w, r, err)
 		return
 	}
-}
-
-func (app *application) userContextMiddleware(next http.Handler) http.Handler {
-	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		userId, err := strconv.ParseInt(chi.URLParam(r, "userId"), 10, 64)
-		if err != nil {
-			app.badRequestError(w, r, err)
-			return
-		}
-
-		ctx := r.Context()
-
-		user, err := app.store.Users.GetUserById(ctx, userId)
-
-		if err != nil {
-			switch {
-			case errors.Is(err, store.ErrNotFound):
-				app.notFoundError(w, r, err)
-				return
-			default:
-				app.internalServerError(w, r, err)
-				return
-			}
-		}
-
-		ctx = context.WithValue(ctx, userCtx, user)
-		next.ServeHTTP(w, r.WithContext(ctx))
-	})
 }
 
 func getUserFromContext(r *http.Request) *store.User {
